src-tauri/error.txt
    Checking hexa-launcher-app v0.1.0 (C:\Users\atuya\Documents\develop\hexa-launcher\src-tauri)
error[E0308]: arguments to this method are incorrect
     --> src\shortcut_utils.rs:47:32
      |
   47 |             let _ = shell_link.GetPath(&mut target_buffer, None, SLGP_FLAGS(0));
      |                                ^^^^^^^                           ------------- expected `u32`, found `SLGP_FLAGS`
      |
note: expected `*mut WIN32_FIND_DATAW`, found `Option<_>`
     --> src\shortcut_utils.rs:47:60
      |
   47 |             let _ = shell_link.GetPath(&mut target_buffer, None, SLGP_FLAGS(0));
      |                                                            ^^^^
      = note: expected raw pointer `*mut WIN32_FIND_DATAW`
                        found enum `std::option::Option<_>`
note: method defined here
     --> C:\Users\atuya\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\windows-0.58.0\src\Windows\Win32\UI\Shell\mod.rs:19406:19
      |
19406 |     pub unsafe fn GetPath(&self, pszfile: &mut [u16], pfd: *mut super::super::Storage::FileSystem::WIN32_FIND_DATAW, fflags: u32) -> wind...
      |                   ^^^^^^^

For more information about this error, try `rustc --explain E0308`.
error: could not compile `hexa-launcher-app` (lib) due to 1 previous error
